# Study

./: pyproject.toml
Books/greenbooks/: Chapter1.ipynb  Chapter1_tmp.md  R_stan_Chapter1.ipynb  R_stan_Chapter1_tmp.md
Books/math-algorithm-book/Chapter2/: 10.py  11.py  4.py  5.py  7.py  8.py  9.py  Chapter2.md
Books/math-algorithm-book/Chapter3/: 12.py  13.py  14.py  14_2.py  16.py  17.py  18.py  19.py  20.py  21.py  21_2.py  22.py  23.py  24.py  25.py  26.py  27.py  27_2.py  28.py  29.py  30.py  31.py  9.py  Chapter3.md  mergesort.py  tempCodeRunnerFile.py  test_list.py  tmp.py
Books/math-algorithm-book/Chapter4/: Chapter4.md
C_compiler/: chapter1.md  log.md
Programminglanguage/: 00_binary_search_tree.md  01_java.md  07_Specification_of_PL.md  README.md  aboutLanguageTheory.md  aboutObject_Oriented.md
